--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body{
+    background-color: #eee !important;
+    font-family: 'Roboto', sans-serif !important;
+}
+
+.rightContent{
+    text-align: right;
+    margin-right: 20%;
+}
+
 /* NAVBAR */
 
 .navbar{
@@ -5,7 +15,7 @@
     width: 100%;
     display: block !important;
     position: fixed !important;
-    background-color: #025955;
+    background-color: #097969;
     z-index: 8;
 }
 
@@ -15,7 +25,10 @@
     grid-template-columns: 50% 50%;
 }
 .logo{
-    padding-left: 50px;
+    padding-left: 10%;
+}
+.logo img{
+    transform: translate(0, -30px);
 }
 .opcionesNavbar{
     box-sizing: content-box;
@@ -24,6 +37,7 @@
     text-align: end;
     font-family: Arial, Helvetica, sans-serif;
     padding-right: 15px;
+    margin-bottom: 30px;
 }
 .opcionesNavbar > a{
     color: white;
@@ -35,7 +49,7 @@
 }
 
 .dropbtn {
-background-color: #025955;
+background-color: #097969;
 color: white;
 padding: 16px;
 font-size: 16px;
@@ -68,7 +82,7 @@ z-index: 1;
 }
 
 .dropdown-content a {
-color: #025955;
+color: #097969;
 padding: 12px 16px;
 text-decoration: none;
 display: block;
@@ -79,6 +93,79 @@ display: block;
 .dropdown:hover .dropdown-content {display: block;}
 
 
+/* BIENVENIDA */
+
+.bienvenidaContainer{
+    position: relative;
+    text-align: start;
+    background-image: url('./assets/bienvenida2.JPG');
+    height: 800px;
+}
+
+
+.bienvenidaContainer h1{
+    position: absolute;
+    max-width: 50%;
+    top: 40%; /* Coloca el elemento en la mitad superior del contenedor */
+    left: 50%; /* Coloca el elemento en el centro del contenedor */
+    transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
+    color: white; /* Color del texto */
+    font-size: 24px; /* Tamaño de fuente */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.bienvenidaContainer h2{
+    position: absolute;
+    max-width: 50%;
+    top: 50%; /* Coloca el elemento en la mitad superior del contenedor */
+    left: 50%; /* Coloca el elemento en el centro del contenedor */
+    transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
+    color: #097969; /* Color del texto */
+    font-size: 72px; /* Tamaño de fuente */
+    font-weight: bold; /* Peso de la fuente */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.bienvenidaContainer h3{
+    position: absolute;
+    max-width: 50%;
+    top: 60%; /* Coloca el elemento en la mitad superior del contenedor */
+    left: 50%; /* Coloca el elemento en el centro del contenedor */
+    transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
+    color: #097969; /* Color del texto */
+    font-size: 72px; /* Tamaño de fuente */
+    font-weight: bold; /* Peso de la fuente */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.bienvenidaContainer span{
+    text-align: center;
+    position: absolute;
+    max-width: 40%;
+    top: 70%; /* Coloca el elemento en la mitad superior del contenedor */
+    left: 50%; /* Coloca el elemento en el centro del contenedor */
+    transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
+    color: white; /* Color del texto */
+    font-size: 14px; /* Tamaño de fuente */
+}
+.bienvenidaContainer button{
+    position: absolute;
+    max-width: 50%;
+    top: 80%; /* Coloca el elemento en la mitad superior del contenedor */
+    left: 50%; /* Coloca el elemento en el centro del contenedor */
+    transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
+    background-color: #097969;
+    color: white;
+    padding: 12px 24px 12px 24px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+
+}
+
+.bienvenidaContainer button:hover{
+    background-color: #07a089;
+}
 /* CAROUSEL */
 
 .carousel-caption{
@@ -103,50 +190,113 @@ display: block;
     background-color: #025955;
     color: #fff;
 }
-.carousel-caption{
-    margin-bottom: 250px;
-}
+
 
 /*Containers informacion*/
 
 .infoContainer{
     height: 100%;
+    padding-left: 5%;
+    padding-right: 10%;
+
 }
 
 .headerInfoContainer{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-top: 50px;
     height: 150px;
+    margin-left: 10%;
     padding: 20px;
-    text-align: center;
+}
+
+.headerInfoContainer h2{
+    font-weight: 700 ;
 }
 
 .contentInfoContainer{
-    margin-left: 100px;
-    margin-right: 100px;
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
-
-.card-body1{
-    background-image: url('./assets/4.jpg');
-    background-size: cover;
-    height: 300px;
+.card-title{
+    font-weight: 700;
+    margin-bottom: 15px !important;
 }
-.card-body2{
-    background-image: url('./assets/5.jpg');
-    background-size: cover;
-    height: 300px;
+.card-text{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 15px;
 }
-.card-body3{
-    background-image: url('./assets/6.jpg');
-    background-size: cover;
-    height: 300px;
 
+.card-footer{
+    justify-content: space-between;
+    display: flex;
+    box-sizing: border-box;
+}
+
+/* OTRAS SECCIONES INICIO */
+
+.infoOtrasSecciones{
+    margin-top: 100px;
+    width: 100%;
+    background-color: #025955;
+    color: white;
+}
+.titleOtrasSecciones{
+    padding-top: 50px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    height: 100px;
+}
+
+.contentOtrasSecciones{
+    height: 400px;
 }
 
 /*CARD*/
+/* Ocultar el texto y las opciones por defecto */
 
-.card{
-    box-sizing: border-box;
-    margin: 20px;
+
+
+/*BUTTONS*/
+
+.btnNormal{
+    background-color: #097969;
+    color: white;
+    padding: 10px 20px 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: 700;
+}
+.btnNormal:hover{
+    background-color: #07a089;
+}
+
+.btnCard{
+    background-color: transparent;
+    border: 1px solid #097969 !important;
+    color: #097969;
+    padding: 5px 0 5px 0;
+    width: 40%;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: 700;
+    margin-right: 5px;
+}
+.btnCard img{
+    vertical-align: text-top;
+}
+
+.btnLargo{
+    width: 100%;
+}
+
+
+.btnCard:hover{
+    background-color: #eeeeee;
+    color: #097969;
 }
