--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 
 .rightContent{
     text-align: right;
-    margin-right: 20%;
+    margin-right: 10%;
 }
 
 /* NAVBAR */
@@ -15,7 +15,7 @@ body{
     width: 100%;
     display: block !important;
     position: fixed !important;
-    background-color: #097969;
+    background-color: #0766AD;
     z-index: 8;
 }
 
@@ -49,7 +49,7 @@ body{
 }
 
 .dropbtn {
-background-color: #097969;
+background-color: #0766AD;
 color: white;
 padding: 16px;
 font-size: 16px;
@@ -82,13 +82,13 @@ z-index: 1;
 }
 
 .dropdown-content a {
-color: #097969;
+color: #3498DB;
 padding: 12px 16px;
 text-decoration: none;
 display: block;
 }
 
-.dropdown-content a:hover {background-color: #025955; color: white;}
+.dropdown-content a:hover {background-color: #3498DB; color: white;}
 
 .dropdown:hover .dropdown-content {display: block;}
 
@@ -99,14 +99,15 @@ display: block;
     position: relative;
     text-align: start;
     background-image: url('./assets/bienvenida2.JPG');
-    height: 800px;
+    background-repeat: round;
+    height: 670px;
 }
 
 
 .bienvenidaContainer h1{
     position: absolute;
     max-width: 50%;
-    top: 40%; /* Coloca el elemento en la mitad superior del contenedor */
+    top: 30%; /* Coloca el elemento en la mitad superior del contenedor */
     left: 50%; /* Coloca el elemento en el centro del contenedor */
     transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
     color: white; /* Color del texto */
@@ -117,10 +118,10 @@ display: block;
 .bienvenidaContainer h2{
     position: absolute;
     max-width: 50%;
-    top: 50%; /* Coloca el elemento en la mitad superior del contenedor */
+    top: 40%; /* Coloca el elemento en la mitad superior del contenedor */
     left: 50%; /* Coloca el elemento en el centro del contenedor */
     transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
-    color: #097969; /* Color del texto */
+    color: #FFD700; /* Color del texto */
     font-size: 72px; /* Tamaño de fuente */
     font-weight: bold; /* Peso de la fuente */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -128,10 +129,10 @@ display: block;
 .bienvenidaContainer h3{
     position: absolute;
     max-width: 50%;
-    top: 60%; /* Coloca el elemento en la mitad superior del contenedor */
+    top: 50%; /* Coloca el elemento en la mitad superior del contenedor */
     left: 50%; /* Coloca el elemento en el centro del contenedor */
     transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
-    color: #097969; /* Color del texto */
+    color: #FFD700; /* Color del texto */
     font-size: 72px; /* Tamaño de fuente */
     font-weight: bold; /* Peso de la fuente */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -141,7 +142,7 @@ display: block;
     text-align: center;
     position: absolute;
     max-width: 40%;
-    top: 70%; /* Coloca el elemento en la mitad superior del contenedor */
+    top: 65%; /* Coloca el elemento en la mitad superior del contenedor */
     left: 50%; /* Coloca el elemento en el centro del contenedor */
     transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
     color: white; /* Color del texto */
@@ -153,7 +154,7 @@ display: block;
     top: 80%; /* Coloca el elemento en la mitad superior del contenedor */
     left: 50%; /* Coloca el elemento en el centro del contenedor */
     transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
-    background-color: #097969;
+    background-color: #3498DB;
     color: white;
     padding: 12px 24px 12px 24px;
     font-size: 16px;
@@ -164,40 +165,15 @@ display: block;
 }
 
 .bienvenidaContainer button:hover{
-    background-color: #07a089;
+    background-color: #0766AD;
 }
-/* CAROUSEL */
-
-.carousel-caption{
-    color: #fff !important;
-}
-
-.carousel-caption h5{
-    font-size: 30px;
-}
-
-.carousel-caption p{
-    font-size: 16px;
-}
-.carousel-inner{
-    max-height: 600px;
-}
-
-.carousel-caption button{
-    font-size: 16px;
-    border-radius: 5px;
-    padding: 5px;
-    background-color: #025955;
-    color: #fff;
-}
-
 
 /*Containers informacion*/
 
 .infoContainer{
     height: 100%;
     padding-left: 5%;
-    padding-right: 10%;
+    padding-right: 5%;
 
 }
 
@@ -212,11 +188,13 @@ display: block;
 
 .headerInfoContainer h2{
     font-weight: 700 ;
+    color: #0766AD;
 }
 
 .contentInfoContainer{
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+    text-align: center;
 }
 
 .card-title{
@@ -237,12 +215,12 @@ display: block;
 /* OTRAS SECCIONES INICIO */
 
 .infoOtrasSecciones{
-    margin-top: 100px;
+    margin-top: 50px;
     width: 100%;
-    background-color: #025955;
     color: white;
 }
 .titleOtrasSecciones{
+    color: #0766AD;
     padding-top: 50px;
     font-family:Georgia, 'Times New Roman', Times, serif;
     text-align: center;
@@ -250,8 +228,57 @@ display: block;
 }
 
 .contentOtrasSecciones{
-    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    height: 500px;
+    padding:50px;
+    text-align: center;
 }
+
+.contentOtrasSecciones img{
+    border-radius: 15px;
+    cursor: pointer;
+}
+  
+  .imagen-hover {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .imagen-hover img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    display: flex;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.3s ease;
+  }
+  
+  .boton {
+    padding: 10px 20px;
+    background-color: #3498DB;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+  
+  .imagen-hover:hover .overlay {
+    opacity: 1;
+  }
 
 /*CARD*/
 /* Ocultar el texto y las opciones por defecto */
@@ -261,7 +288,7 @@ display: block;
 /*BUTTONS*/
 
 .btnNormal{
-    background-color: #097969;
+    background-color: #3498DB;
     color: white;
     padding: 10px 20px 10px 20px;
     font-size: 16px;
@@ -271,15 +298,15 @@ display: block;
     font-weight: 700;
 }
 .btnNormal:hover{
-    background-color: #07a089;
+    background-color: #0766AD;
 }
 
 .btnCard{
     background-color: transparent;
-    border: 1px solid #097969 !important;
-    color: #097969;
+    border: 1px solid #3498DB !important;
+    color: #3498DB;
     padding: 5px 0 5px 0;
-    width: 40%;
+    width: 70%;
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -298,5 +325,31 @@ display: block;
 
 .btnCard:hover{
     background-color: #eeeeee;
-    color: #097969;
+    color: #0766AD;
+}
+
+
+/* FOOTER */
+
+.footerContainer{
+    display: grid;
+    grid-template-columns: 100%;
+    width: 100%;
+    text-align: center;
+    margin-top: 50px;
+    height: 150px;
+    background-color: #0766AD;
+}
+
+.footerImg{
+    text-align: start;
+    vertical-align: middle;
+}
+
+.footerText{
+    margin-top: -100px;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    vertical-align: middle;
 }
