--- a/style.css
+++ b/style.css
@@ -367,7 +367,8 @@ display: block;
 
 .titulo-valoracion{
     padding: 10px;
-    font-size: 28px;
+    font-size: 20px;
+    max-height: 70px;
     border-bottom: 2px solid #333;
     color: white !important;
     background-color: #3498DB !important;
@@ -375,7 +376,7 @@ display: block;
 
 .comentario-valoracion{
     padding: 10px;
-    font-size: 20px;
+    font-size: 18px !important;
 }
 
 .tipo-feedback-valoracion{
