--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     width: 100%;
     display: block !important;
     position: fixed !important;
-    background-color: #0766AD;
+    background-color: #3A8F9B;
     z-index: 8;
 }
 
@@ -45,11 +45,11 @@ body{
     padding: 15px;
 }
 .opcionesNavbar > a:hover{
-    color: black;
+    color: #333;
 }
 
 .dropbtn {
-background-color: #0766AD;
+background-color: #3A8F9B;
 color: white;
 padding: 16px;
 font-size: 16px;
@@ -58,7 +58,7 @@ cursor: pointer;
 }
 
 .dropbtn a:hover{
-    color: black;
+    color: #333;
 }
 .dropbtn a {
     text-decoration: none;
@@ -82,13 +82,13 @@ z-index: 1;
 }
 
 .dropdown-content a {
-color: #3498DB;
+color: #3A8F9B;
 padding: 12px 16px;
 text-decoration: none;
 display: block;
 }
 
-.dropdown-content a:hover {background-color: #3498DB; color: white;}
+.dropdown-content a:hover {background-color: #3A8F9B; color: white;}
 
 .dropdown:hover .dropdown-content {display: block;}
 
@@ -154,7 +154,7 @@ display: block;
     top: 80%; /* Coloca el elemento en la mitad superior del contenedor */
     left: 50%; /* Coloca el elemento en el centro del contenedor */
     transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
-    background-color: #3498DB;
+    background-color: #3A8F9B;
     color: white;
     padding: 12px 24px 12px 24px;
     font-size: 16px;
@@ -165,7 +165,7 @@ display: block;
 }
 
 .bienvenidaContainer button:hover{
-    background-color: #0766AD;
+    background-color: #147A88;
 }
 
 /*Containers informacion*/
@@ -188,7 +188,7 @@ display: block;
 
 .headerInfoContainer h2{
     font-weight: 700 ;
-    color: #0766AD;
+    color: #3A8F9B;
 }
 
 .contentInfoContainer{
@@ -220,7 +220,7 @@ display: block;
     color: white;
 }
 .titleOtrasSecciones{
-    color: #0766AD;
+    color: #3A8F9B;
     padding-top: 50px;
     font-family:Georgia, 'Times New Roman', Times, serif;
     text-align: center;
@@ -288,7 +288,7 @@ display: block;
 /*BUTTONS*/
 
 .btnNormal{
-    background-color: #3498DB;
+    background-color: #3A8F9B;
     color: white;
     padding: 10px 20px 10px 20px;
     font-size: 16px;
@@ -298,13 +298,13 @@ display: block;
     font-weight: 700;
 }
 .btnNormal:hover{
-    background-color: #0766AD;
+    background-color: #147A88;
 }
 
 .btnCard{
     background-color: transparent;
-    border: 1px solid #3498DB !important;
-    color: #3498DB;
+    border: 1px solid #147A88 !important;
+    color: #147A88;
     padding: 5px 0 5px 0;
     width: 70%;
     font-size: 16px;
@@ -324,8 +324,8 @@ display: block;
 
 
 .btnCard:hover{
-    background-color: #eeeeee;
-    color: #0766AD;
+    background-color: #147A88;
+    color: white;
 }
 
 
@@ -338,7 +338,7 @@ display: block;
     text-align: center;
     margin-top: 50px;
     height: 150px;
-    background-color: #0766AD;
+    background-color: #3A8F9B;
 }
 
 .footerImg{
@@ -371,7 +371,7 @@ display: block;
     max-height: 70px;
     border-bottom: 2px solid #333;
     color: white !important;
-    background-color: #3498DB !important;
+    background-color: #3A8F9B !important;
 }
 
 .comentario-valoracion{
@@ -391,7 +391,7 @@ display: block;
 }
 
 .formularioValoracion{
-    background-color: #0766AD;
+    background-color: #147A88;
     align-self: center;
     height: 600px;
     max-height: 450px;
