--- a/style.css
+++ b/style.css
@@ -12,6 +12,38 @@ body{
     padding-top: 100px;
 }
 
+/* CONTENIDO PAGINAS */
+
+.headerContainer{
+    padding-top: 30px;
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.headerContainer h2{
+    font-size: 56px;
+    color: #147A88;
+    padding-bottom: 10px
+}
+
+.headerContainer p{
+    margin: 0;
+}
+
+.bodyContainer{
+
+}
+
+.btnFilter{
+    background-color: #3A8F9B;color: white; border: 1px solid#3A8F9B; border-radius: 10px; width: 10%;
+} 
+
+.btnFilter:hover{
+    background-color: #147A88;
+}
+
+
+
 /* NAVBAR */
 
 .navbar{
@@ -335,7 +367,7 @@ display: block;
 
 /* FOOTER */
 
-.footerContainer{
+.footerContainerIndex{
     display: grid;
     grid-template-columns: 100%;
     width: 100%;
