--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body{
 }
 
 .btnFilter{
-    background-color: #3A8F9B;color: white; border: 1px solid#3A8F9B; border-radius: 10px; width: 10%;
+    background-color: #3A8F9B;color: white; border: 1px solid#3A8F9B; border-radius: 10px; width: 10%;margin-bottom: 30px;
 } 
 
 .btnFilter:hover{
