--- a/style.css
+++ b/style.css
@@ -10,8 +10,19 @@ body{
 
 .container{
     padding-top: 100px;
+    margin-right: 0;
+    margin-left: 0;
+    padding-right: 0;
+    padding-left: 0;
 }
 
+.visible{
+    display: block;
+}
+
+.invisible{
+    display:none;
+}
 /* CONTENIDO PAGINAS */
 
 .headerContainer{
@@ -35,7 +46,7 @@ body{
 }
 
 .btnFilter{
-    background-color: #3A8F9B;color: white; border: 1px solid#3A8F9B; border-radius: 10px; width: 10%;margin-bottom: 30px;
+    background-color: #3A8F9B;color: white; border: 1px solid#3A8F9B; border-radius: 10px; width: 10%; 
 } 
 
 .btnFilter:hover{
@@ -257,7 +268,6 @@ display: block;
 }
 .titleOtrasSecciones{
     color: #3A8F9B;
-    padding-top: 50px;
     font-family:Georgia, 'Times New Roman', Times, serif;
     text-align: center;
     height: 100px;
