--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ display: block;
     left: 50%; /* Coloca el elemento en el centro del contenedor */
     transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
     color: white; /* Color del texto */
+    font-weight: 900;
     font-size: 24px; /* Tamaño de fuente */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -189,11 +190,12 @@ display: block;
     text-align: center;
     position: absolute;
     max-width: 40%;
+    font-weight: 700;
     top: 65%; /* Coloca el elemento en la mitad superior del contenedor */
     left: 50%; /* Coloca el elemento en el centro del contenedor */
     transform: translate(-50%, -50%); /* Centra el texto verticalmente y horizontalmente */
     color: white; /* Color del texto */
-    font-size: 14px; /* Tamaño de fuente */
+    font-size: 16px; /* Tamaño de fuente */
 }
 .bienvenidaContainer button{
     position: absolute;
@@ -249,6 +251,7 @@ display: block;
     margin-bottom: 15px !important;
 }
 .card-text{
+    padding: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-top: 15px;
 }
