--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
     padding-top: 30px;
     text-align: center;
     padding-bottom: 30px;
+    font-size: 20px;
 }
 
 .headerContainer h2{
@@ -46,7 +47,7 @@ body{
 }
 
 .btnFilter{
-    background-color: #3A8F9B;color: white; border: 1px solid#3A8F9B; border-radius: 10px; width: 10%; 
+    background-color: #3A8F9B;color: white; border: 1px solid#3A8F9B; border-radius: 10px; width: 10%;
 } 
 
 .btnFilter:hover{
@@ -233,6 +234,7 @@ display: block;
     height: 150px;
     margin-left: 10%;
     padding: 20px;
+    font-size: 20px;
 }
 
 .headerInfoContainer h2{
